# kuLimo

./: README.md  install.sh  map.pgm  map.yaml  my_map.pbstream  setup_guide.md
catkin_ws/src/hello_ros/: CMakeLists.txt
catkin_ws/src/hello_ros/scripts/: circle_limo  simpleParameter  timeActionClient  timeActionClient2  timeActionServer
catkin_ws/src/limo_application/launch/: track_application2.launch
catkin_ws/src/limo_application/scripts/: Line_detect.py  control.py  follow_yellow_line.py
catkin_ws/src/limo_gazebo_sim/config/: limo_four_diff_control.yaml
catkin_ws/src/limo_gazebo_sim/launch/: limo_four_diff_empty_world.launch  limo_four_diff_empty_world1.launch  limo_four_diff_track.launch  limo_worlds.launch
catkin_ws/src/limo_gazebo_sim/worlds/: empty.world  willowgarage.world
catkin_ws/src/limo_ros/: README.md
colcon_ws/src/: gazebo_models_diff.launch.py  turtlebot3_lds_2d.lua  turtlebot3_world.world
colcon_ws/src/hello_ros2/: setup.py
colcon_ws/src/hello_ros2/hello_ros2/: action_server.py  add_server.py  change_color_client.py  dynamic_tf.py  follow_turtlesim.py  move_limo.py  move_turtle.py  my_topic_pub.py  patrol.py  scan_map.py  (+4 more)
colcon_ws/src/ku_description/: package.xml  setup.py
colcon_ws/src/user_interface/: CMakeLists.txt
doc/: 01.멘토링일지_고려대_자율주행_최수길.hwp  limo.md  limo_practice.md  ros.md  simulation.md  노트북 ↔ LIMO 로봇 ROS 통신 매뉴얼.md  프로젝트_계획서_서식.hwp
doc/curriculum/: 10_인공지능_강의_계획서.md  gazebo_slam_nav.md  limo.md  python_2_day.md  ros1_2.md
doc/docker/: docker 설정.md
doc/project/: 1조_프로젝트_계획서.docx  2조_프로젝트_계획서.hwp  4조프로젝트_계획서.hwp
(+30 files in other folders)
